# safetycare

./: .dockerignore  .gitignore  CLAUDE.md  PROJECT_DOCUMENTATION.md  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: .env  .env.example  Dockerfile  README.md  pyproject.toml
backend/src/safetycare/: __init__.py  config.py  main.py
backend/src/safetycare/api/: __init__.py  auth.py  cameras.py  health.py  router.py  stream.py  telegram.py
backend/src/safetycare/core/: __init__.py  dependencies.py  exceptions.py  security.py
backend/src/safetycare/models/: __init__.py  auth.py  camera.py  detection.py  health.py  telegram.py
backend/src/safetycare/services/: __init__.py  detection_pipeline.py  rtsp_client.py  telegram_notifier.py
backend/src/safetycare/utils/: __init__.py  logging.py
certs/: README.md  generate-certs.sh
frontend/: .env  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/cameras/: page.tsx
frontend/src/app/cameras/[id]/: CameraDetail.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/settings/telegram/: page.tsx
frontend/src/app/setup/: page.tsx
frontend/src/components/: AlertBanner.tsx  CameraCard.tsx  PasswordDisplay.tsx  VideoStream.tsx  index.ts
frontend/src/components/ui/: alert.tsx
frontend/src/hooks/: index.ts  useAuth.ts  useCamera.ts  useWebSocket.ts
frontend/src/types/: index.ts
nginx/: nginx.conf
